[project]
name = "pandas-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.0.0",
    "pandas-stubs>=2.3.2.250827",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
